# mado

./: .cvsignore  .gitignore  .gitmodules  CONTRIBUTING.md  COPYING  ChangeLog  LICENSE  Makefile  Makefile.am  README.md  architecture  configure.ac  twin.h  twin.pc.in  twin_box.c  twin_button.c  twin_calc.c  twin_calc.h  twin_clock.c  twin_clock.h  twin_convolve.c  twin_demo.c  twin_demo.h  twin_demoline.c  twin_demoline.h  twin_demospline.c  twin_demospline.h  twin_dispatch.c  twin_draw.c  twin_file.c  twin_fixed.c  twin_font.c  twin_geom.c  twin_glyphs.c  twin_hello.c  twin_hello.h  twin_hull.c  twin_icon.c  twin_label.c  twin_matrix.c  (+22 more)
.ci/: check-format.sh  check-newline.sh
.github/workflows/: headless-test.yml  main.yml
apps/: animation.c  apps_animation.h  apps_calc.h  apps_clock.h  apps_demo.h  apps_hello.h  apps_image.h  apps_line.h  apps_lottie.h  apps_multi.h  apps_spline.h  apps_text.h  calc.c  clock.c  demo.c  dummy.c  hello.c  image.c  line.c  lottie.c  main.c  multi.c  perf.c  spline.c  text.c  twin-sdl.c  twin_calc.h  twin_clock.h  twin_demo.h  twin_demoline.h  twin_demospline.h  twin_hello.h  twin_text.h
assets/: nyancat.lottie
assets/web/: .gitignore  index.html  mado-wasm.js
backend/: drm.c  fbdev.c  headless-shm.h  headless.c  linux_input.c  linux_input.h  linux_vt.h  sdl.c  twin_sdl.h  vnc.c  wasm.c
configs/: Kconfig  defconfig
contrib/twin_fedit/: Makefile  sfit.c  twin-fedit.c  twin-fedit.h  twin-sfit.c
contrib/twin_ttf/: Makefile.am  twin-ttf.c  twin-ttf.h  twin_ttf.c  twin_ttf.h
docs/: ChangeLog-old  backends.md
include/: twin.h  twin_private.h  twinint.h  util.h
mk/: common.mk  deps.mk  toolchain.mk
scripts/: detect-compiler.py  gen-composite-decls.py  gen-shadow-lut.py  serve-wasm.py
src/: animation.c  api.c  box.c  button.c  closure.c  convolve.c  cursor.c  dispatch.c  draw-builtin.c  draw-common.c  draw-pixman.c  draw.c  file.c  fixed.c  font.c  font_default.c  geom.c  hull.c  icon.c  image-gif.c  image-jpeg.c  image-lottie.c  image-png.c  image-tvg.c  image.c  label.c  log.c  log.h  matrix.c  mem-tlsf.c  memstats.c  path.c  pattern.c  pixman.c  pixmap.c  poly.c  primitive.c  queue.c  screen-ops.c  screen.c  (+9 more)
tools/: build-neatvnc.sh  headless-ctl.c  perf.c
tools/font-edit/: Makefile  README.md  font-edit.c  font-edit.h  nchars  sfit.c  twin-fedit.c  twin-fedit.h
tools/kconfig/: LICENSE  README.md  kconfiglib.py  menuconfig.py
tools/ttf/: Makefile  twin-ttf.c
twin_fedit/: Makefile  twin-fedit.c  twin-fedit.h  twin-sfit.c
twin_ttf/: .cvsignore
